--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -25,3 +25,4 @@ jobs:
         run: |
           aws ssm start-automation-execution \
             --document-name "video-player-rest-api-golden-ami-automation-document" \
+            --parameters "AutomationAssumeRole=arn:aws:iam::617207029622:role/RESTAPIGoldenAMIAutomationRole"
